# agentic-flows

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  todo-workflows.md
.github/: pull_request_template.md
.github/workflows/: validate.yml
docs/: README.md  adapter-implementation-plan.md  adapter-smoke.md  architecture.md  best-practices.md  buildable-now.md  changelog-management.md  compatibility-matrix.md  consumer-model.md  core-integration.md  deployment.md  event-streams.md  flow-samples.md  flow-spec.md  getting-started.md  goals.md  governance.md  operating-workflows.md  project-plan.md  release-notes-template.md  release-packaging.md  release-process.md  roadmap.md  run-bundles.md  runnable-flows.md  tasks.md  testing-strategy.md  versioning.md  workflow-authoring.md
docs/proposals/: README.md  lifecycle-evidence-reframe.md  sub-flow-composition.md
examples/adapters/: crustcore-adapter-certification.adapter-smoke.json  crustcore-agent-quality-review.adapter-smoke.json  crustcore-api-contract-change.adapter-smoke.json  crustcore-audit-trail-reconstruction.adapter-smoke.json  crustcore-capability-negotiation.adapter-smoke.json  crustcore-connector-productionization.adapter-smoke.json  crustcore-dependency-upgrade.adapter-smoke.json  crustcore-security-hotfix.adapter-smoke.json  (+53 more)
schemas/: adapter-smoke.schema.json  capability-registry.schema.json  event-stream.schema.json  event.schema.json  flow.schema.json  node.schema.json  run.schema.json  runtime-profile.schema.json  sample.schema.json
tests/: test_flowctl.py
(+528 files in other folders)
