[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-flows"
version = "0.1.0"
description = "Reusable workflow definitions and validation tools for RNT56 agentic projects."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "jsonschema>=4.22",
  "PyYAML>=6.0"
]

[project.scripts]
flowctl = "flowctl.cli:main"

[tool.setuptools.packages.find]
where = ["tools/flowctl"]

[tool.pytest.ini_options]
pythonpath = ["tools/flowctl"]
testpaths = ["tests"]
addopts = "-q"

